...
                const SizedBox(height: 32),

                // --- Erstellen Button ---
                SizedBox(
                  height: 48,
                  child: ElevatedButton(
                    key: const Key('addMeal_create_button'),
                    onPressed: _createMeal,
                    child: const Text('Erstellen'),
                  ),
                ),
              ],
            ),
...
